--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <h1> This is my first page with GitHub Pages </h1>
-<p>Thanks GitHub!</p>
+<h2> Done by Mohammad Abdulrahman Alhudaib</h2>
+  <p>Thanks GitHub!</p>
 </html>
